Add basic project struction for easier automation. Modified CMakeLists.txt files, linking all essential files for compilation. Add main.cpp function.cpp function.h unit-tests.cpp .gitignore files. Fixed compilation issue with packy.py and packy_functions.py scripts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(pingu VERSION 0.1.0-alpha)
+project(pingu VERSION 0.1.0)
 
 # Set default build type to 'Release' if not specified
 if(NOT CMAKE_BUILD_TYPE)
